# AutoGen_agent

./: .gitignore  README.md  notebook.ipynb  pyproject.toml
src/autogen_agent/: main.py  mock_main.py
tests/: test_main.py
